--- a/tinker/static/assets/css/tinker.css
+++ b/tinker/static/assets/css/tinker.css
@@ -490,66 +490,10 @@ label.checkbox {
     margin-bottom: 8px!important;
 }
 
-/*input[type='checkbox'] {*/
-    /*-webkit-appearance: none;*/
-    /*background-color: #FFFFFF;*/
-    /*border: 2px solid #9A9A9A;*/
-    /*box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05);*/
-    /*padding: 2px;*/
-    /*border-radius: 3px;*/
-    /*display: inline-block;*/
-    /*position: relative;*/
-    /*width: 16px;*/
-    /*height: 16px;*/
-    /*cursor: pointer;*/
-    /*float: left;*/
-    /*opacity: .5;*/
-/*}*/
-
-/*input[type='checkbox']:active, input[type='checkbox']:checked:active {*/
-    /*box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px 1px 3px rgba(0, 0, 0, 0.1);*/
-    /*cursor: pointer;*/
-    /*opacity: 1;*/
-/*}*/
-
-/*input[type='checkbox']:checked {*/
-    /*background-color: #FFFFFF;*/
-    /*border: 2px solid #66615b;*/
-    /*box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05),*/
-    /*inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05),*/
-    /*inset 15px 10px -12px rgba(255, 255, 255, 0.1);*/
-    /*color: #66615b;*/
-    /*cursor: pointer;*/
-    /*opacity: 1;*/
-/*}*/
-
-/*input[type='checkbox']:checked:after {*/
-    /*content: '\2713';*/
-    /*font-size: 19px;*/
-    /*position: absolute;*/
-    /*top: -5px;*/
-    /*left: -1px;*/
-    /*color: #66615b;*/
-/*}*/
-
-/*input[type='checkbox']:hover:after {*/
-    /*content: '\2713';*/
-    /*font-size: 19px;*/
-    /*position: absolute;*/
-    /*top: -5px;*/
-    /*left: -1px;*/
-    /*color: #66615b;*/
-    /*border-color: #66615b*/
-/*}*/
-
-/*input[type='checkbox']:checked:hover:after {*/
-    /*content: '\2713';*/
-    /*font-size: 19px;*/
-    /*position: absolute;*/
-    /*top: -5px;*/
-    /*left: -1px;*/
-    /*color: #66615b;*/
-/*}*/
+.bio-status {
+    font-family: Muli, Helvetica Neue, sans-serif!important;
+    font-size: 85%;
+}
 
 /* Notifications */
 [data-notify="container"].alert {
