Last small change

--- a/tinker/static/assets/css/tinker.css
+++ b/tinker/static/assets/css/tinker.css
@@ -364,11 +364,11 @@ a:hover {
 }
 
 .icon-big a {
-    color: #1978b2
+    color: #0069AA
 }
 
 .icon-big a:hover {
-    color: #0069AA
+    color: #005489
 }
 
 .nav .active a {
