Added an Audit to Program Search

--- a/tinker/admin/program_search/templates/program-search-home.html
+++ b/tinker/admin/program_search/templates/program-search-home.html
@@ -11,6 +11,7 @@
 
 {% block main_content %}
     <div class="content">
+        <p>Go to the <a href="{{ url_for('program_search.ProgramSearchView:database_audit_0')}}">audit</a> to check if Tinker and Cascade are matched up correctly.</p>
         <div class="container-fluid">
             <form id='program_search_form' method="post">
                 <div class="card">
