--- a/tinker/admin/program_search/templates/database-audit.html
+++ b/tinker/admin/program_search/templates/database-audit.html
@@ -59,10 +59,28 @@
                     data: JSON.stringify(data),
                     contentType: 'application/json;charset=UTF-8',
                     success: function (result) {
-                        loadTableForSearch()
+                        loadTableForSearch();
                     }
                 });
-            })
+            });
+
+            $('.tinker-delete').click(function(){
+                var url = "{{ url_for('program_search.ProgramSearchView:database_audit_delete') }}";
+                var id = $(this).data('id');
+                var data = {
+                    'old_key':  $('#tinker-old-key' + id).html()
+                };
+
+                $.ajax({
+                    type: "POST",
+                    url: url,
+                    data: JSON.stringify(data),
+                    contentType: 'application/json;charset=UTF-8',
+                    success: function (result) {
+                        loadTableForSearch();
+                    }
+                });
+            });
         }
         loadTableForSearch();
     </script>
