--- a/tinker/static/assets/css/tinker.css
+++ b/tinker/static/assets/css/tinker.css
@@ -175,6 +175,11 @@ a#remove_new_job_button {
     border-color: #f04124 !important;
 }
 
+.modal-confirm {
+    background-color: #f04124 !important;
+    border-color: #f04124 !important;
+}
+
 .error-alert {
     padding: 0px 0px 15px 0px;
     border: 1px solid transparent
@@ -182,7 +187,7 @@ a#remove_new_job_button {
 
 .red-alert {
     background-color: #f04124;
-    border-color: #de2d0f;
+    border-color: #f04124;
     font-size: 12px;
     color: #FFFFFF;
     display: block;
@@ -279,12 +284,12 @@ select.pika-select {
 
 small.required {
     font-size: 9.5px;
-    color: #ff0000
+    color: #f04124
 }
 
 .fa-delete{
     float: right;
-    color: #ff0000;
+    color: #f04124;
     cursor: pointer;
 }
 
