Added a info banner about the tinker2.0 launch

--- a/tinker/templates/tinker-base.html
+++ b/tinker/templates/tinker-base.html
@@ -50,6 +50,10 @@
         {{ nav.nav() }}
       </div>
       <h1 id="page-title">{% block page_title %}Bethel University Tinker{% endblock %}</h1>
+
+    <div style="background-color:tomato;padding:10px">
+        <p>Tinker will be receiving a theme update on October 31. All functionality will remain the same. Contact us at <a href="mailto:web-services@bethel.edu">web-services@bethel.edu</a> if you have any questions.</p>
+    </div>
       <hr />
     </div>
   </div>
